<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_account"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:background="@drawable/roundedbackground"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_account"
            android:fontFamily="cursive"
            android:textSize="40sp"
            android:textAlignment="center" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_bio_name"
            android:textAlignment="center" />

        <android.support.design.widget.TextInputEditText
            android:layout_marginTop="10dp"
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_face_black_24dp" />

        <android.support.design.widget.TextInputEditText
            android:layout_marginTop="10dp"
            android:id="@+id/edit_bio"
            android:hint="@string/introduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_extension_black_24dp" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_id_text" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/email_address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email_black_24dp" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/camp_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_people_outline_black_24dp" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/walking_distance_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_directions_walk_black_24dp" />


        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/save_account_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:layout_gravity="center"
            android:text="@string/save_change"
            android:textAllCaps="false"/>


    </LinearLayout>


