<resources>
    <string name="app_name">Coinz</string>
    <string name="app_name_coinz">Coinz</string>
    <string name="access_token">pk.eyJ1IjoibGl6enlsZWUyMzMiLCJhIjoiY2ptdzZmZHRyMGNxNDNrbzFkMGxqYXR6aiJ9.ruIjA_TsqMFDcsib8I5rUA</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="coin_in_bank">Go Banking!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_trade_coinz">TradeCoinzActivity</string>
...
    <string name="today_rate">Rate of the day</string>
    <string name="convert_to_gold">Exchange gold!</string>
    <string name="camp_is_AI">"camp:\nAI"</string>
    <string name="camp_is_human">"camp:\nHuman"</string>
    <string name="register">Register</string>
    <string name="input_email_address">  input your email address here</string>
    <string name="sign_in">Sign in</string>
    <string name="input_password">  input your password here</string>
    <string name="input_your_friend_email">Input your friend\'s email here!</string>
    <string name="hint_no_coin">Oops! No coin left.</string>
    <string name="email_input">  input your email address here</string>
    <string name="click_something_to_operate">Click the bottom option to operate</string>
    <string name="no_coin_in_wallet">Oops! You have no spare coinz you yourself collected in your wallet</string>
...
    <string name="text_for_value">Text for value</string>
    <string name="bank_in_your_coin">Bank in your coin via here</string>
    <string name="honor_board">Honor Board</string>
    <string name="my_account">My Account</string>
    <string name="change_bio_name">Your can change your name and bio by clicking on them</string>
    <string name="introduce">introduce yourself a little bit here!</string>
    <string name="save_change">Save changes</string>
    <string name="my_property">My Properties Information</string>
    <string name="my_wallet">My Wallet</string>
    <string name="peny">Peny:</string>
    <string name="dolr">Dolr:</string>
    <string name="shil">Shil:</string>
    <string name="quid">Quid:</string>
...
    <string name="exchange_gold">Exchange Gold</string>
    <string name="sign_out">Sign out</string>
    <string name="property">My Properties</string>
    <string name="people">People</string>
    <string name="rank_board">Honor Board</string>
    <string name="camp">Gold of each camp</string>
    <string name="ai">AI:</string>
    <string name="human">Human:</string>
    <string name="individual_ranking">Individual No.1</string>
    <string name="username">Username:</string>
    <string name="gold_honor">Gold in bank:</string>
    <string name="need_init">Not initialized</string>
    <string name="game_description">One day, AI Robots in the Informatics laboratories wake up with their own sense and decide to conquer Informatics Forum as their first base of invading Earth! You can choose between two camps: AI and human. The winner camp can rule School of Informatics for the moment! All you need to do is to collect as much as coins and gold you have!</string>
...
